--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="Alinemeta-logo-container">
-        <img src="avatar-aline.png" alt="Aline Meta" />
+        <img src="imagem/avatar-aline.png" alt="Aline Meta" />
         <h1>Aline META</h1>
         <p>
           Desenvolvido por
