--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       <td>
                         <div class="Alinemeta-red-btn-container">
                           <div class="Alinemeta-red-btn">
-                            <img src="iamgem/visto.pnj" alt="icone de notificação" />
+                            <img src="imagem/visto.png" alt="icone de notificação" />
                           </div>
                         </div>                        
                       </td>
@@ -76,7 +76,7 @@
                       <td>
                         <div class="Alinemeta-red-btn-container">
                           <div class="Alinemeta-red-btn">
-                            <img src="iamgem/visto.pnj" alt="icone de notificação" />
+                            <img src="imagem/visto.png" alt="icone de notificação" />
                           </div>
                         </div>                        
                       </td>
@@ -91,7 +91,7 @@
                       <td>
                         <div class="Alinemeta-red-btn-container">
                           <div class="Alinemeta-red-btn">
-                            <img src="iamgem/visto.pnj"icone de notificação" />
+                            <img src="imagem/visto.png"icone de notificação" />
                           </div>
                         </div>                        
                       </td>
